# bazel_sundry

./: .bazelrc  LICENSE  MODULE.bazel  WORKSPACE.bazel  renovate.json
.github/workflows/: main.yml
bazel/: copts.bzl
bazel_sundry/: BUILD.bazel  runfiles.hh  unix_runfiles.cc  windows_runfiles.cc
test/: BUILD.bazel  test_runfiles.cc
