load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:copts.bzl", "copts")

cc_test(
    name = "runfiles",
    srcs = ["test_runfiles.cc"],
    copts = copts,
    deps = [
        "//bazel_sundry:runfiles",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
